<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/distance12"
        app:cardCornerRadius="8dp"
        app:cardElevation="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/distance24">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/distance16"
                    android:src="@drawable/p_logo"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textAlignment="center"
                    android:textAppearance="@style/HeaderTextStyle"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/register_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_height"
                    android:layout_marginTop="@dimen/distance16"
                    android:background="@drawable/custom_border"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="@dimen/distance8"
                    android:drawableTint="@color/light_blue"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:padding="@dimen/distance8"
                    android:textColor="@color/grey_text"
                    android:textColorHint="@color/light_blue"
                    android:textSize="@dimen/text14"
                    tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/register_username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_height"
                    android:layout_marginTop="@dimen/distance16"
                    android:background="@drawable/custom_border"
                    android:drawableStart="@drawable/ic_baseline_person_pin_24"
                    android:drawablePadding="@dimen/distance8"
                    android:drawableTint="@color/light_blue"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:padding="@dimen/distance8"
                    android:textColor="@color/grey_text"
                    android:textColorHint="@color/light_blue"
                    android:textSize="@dimen/text14"
                    tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_height"
                    android:layout_marginTop="@dimen/distance16"
                    android:background="@drawable/custom_border"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="@dimen/distance8"
                    android:drawableTint="@color/light_blue"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/distance8"
                    android:textColor="@color/grey_text"
                    android:textColorHint="@color/light_blue"
                    android:textSize="@dimen/text14"
                    tools:ignore="Autofill,TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_height"
                    android:layout_marginTop="@dimen/distance16"
                    android:background="@drawable/custom_border"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="@dimen/distance8"
                    android:drawableTint="@color/light_blue"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/distance8"
                    android:textColor="@color/grey_text"
                    android:textColorHint="@color/light_blue"
                    android:textSize="@dimen/text14"
                    tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="@dimen/distance24"
                    android:backgroundTint="@color/light_orange"
                    android:text="@string/register_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white_text"
                    android:textSize="@dimen/text16"
                    app:cornerRadius="@dimen/corner_radius"
                    tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintButtonSize" />

                <TextView
                    android:id="@+id/login_redirect_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/distance4"
                    android:padding="@dimen/distance4"
                    android:text="@string/login_redirect"
                    android:textColor="@color/grey_text"
                    android:textSize="@dimen/text16"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>