<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv_watchCard"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/siv_map"
            android:scaleType="centerCrop"
            android:src="@drawable/p_map"
            android:padding="15dp"
            android:layout_centerVertical="true"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"/>

        <TextView
            android:id="@+id/tv_watched_bird"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/species"
            android:textColor="@color/black87"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_toEndOf="@id/siv_map"
            android:layout_marginTop="6dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/tv_watched_bird"
            android:layout_marginEnd="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_baseline_person_pin_24"
                app:tint="@color/grey_text"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_watch_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/watch_user"
                android:textAlignment="center"
                android:textColor="@color/grey_text"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_watch_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_watched_bird"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@id/siv_map"
            android:drawableStart="@drawable/ic_baseline_calendar_month_24"
            android:drawablePadding="5dp"
            android:drawableTint="@color/grey_border"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/watch_date"
            android:textColor="@color/grey_text"
            android:textSize="14sp"
            tools:ignore="UseCompatTextViewDrawableXml,TextContrastCheck" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_watch_date"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@id/siv_map"
            android:text="@string/location"
            android:textColor="@color/black54"
            android:textSize="16sp"
            android:textAlignment="center"
            android:drawableStart="@drawable/ic_baseline_location_on_24"
            android:drawablePadding="5dp"
            android:drawableTint="@color/grey_border"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <TextView
            android:id="@+id/tv_habitat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_location"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@id/siv_map"
            android:text="@string/habitat"
            android:textColor="@color/black54"
            android:textSize="16sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed-light"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>